# vic3-reader

./: .gitignore  LICENSE  README.md  TODO.md  config.py  explore_save_with_gui.py  how_to_add_more.md  main.py  multi_save_analyzer.py  orchestrator.py  pyproject.toml
documentation/: how_to_add_more.md
metrics/: __init__.py  administrative.py  economy.py  metadata.py  tags_and_players.py
metrics/models/: __init__.py  basic.py  country_database.py
parser/: __init__.py  lexicon.py  reader.py
src/vic3_reader/: orchestrator.py
src/vic3_reader/metrics/: __init__.py  administrative.py  economy.py  metadata.py  tags_and_players.py
src/vic3_reader/metrics/models/: __init__.py
src/vic3_reader/parser/: __init__.py  reader.py
src/vic3_reader/utils/: __init__.py
utils/: __init__.py  gui.py  reader.py
